// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestaurantContainer should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="restaurants-container"
      >
        <section
          class="restaurant-card"
          tabindex="0"
        >
          <header>
            <section>
              <p>
                Steak
              </p>
              <p>
                American
              </p>
              <p>
                Contemporary
              </p>
              <p>
                Seafood
              </p>
              <p>
                Cafe
              </p>
            </section>
          </header>
          <section
            class="card-description"
          >
            <h2>
              <a
                href="http://www.gaylordnational.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Old Hickory Steakhouse
              </a>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-angle-double-right fa-w-14 "
                data-icon="angle-double-right"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  fill="currentColor"
                />
              </svg>
            </h2>
            <main
              class="info"
            >
              <p>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-map-marker-alt fa-w-12 "
                  data-icon="map-marker-alt"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
                    fill="currentColor"
                  />
                </svg>
                Oxon Hill, MD
              </p>
              <p>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-phone-alt fa-w-16 "
                  data-icon="phone-alt"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
                    fill="currentColor"
                  />
                </svg>
                (301) 965-4000
              </p>
            </main>
          </section>
          <footer
            tabindex="0"
          >
            <p>
              More
            </p>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-w-10 "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                fill="currentColor"
              />
            </svg>
          </footer>
        </section>
        <footer
          class="pagination"
        >
          <button
            class="pagination-btn"
            style="opacity: 0;"
          >
            Previous page
          </button>
          <p
            class="pages"
          >
            1 / 3
          </p>
          <button
            class="pagination-btn"
            style="opacity: 1;"
          >
            Next page
          </button>
        </footer>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="restaurants-container"
    >
      <section
        class="restaurant-card"
        tabindex="0"
      >
        <header>
          <section>
            <p>
              Steak
            </p>
            <p>
              American
            </p>
            <p>
              Contemporary
            </p>
            <p>
              Seafood
            </p>
            <p>
              Cafe
            </p>
          </section>
        </header>
        <section
          class="card-description"
        >
          <h2>
            <a
              href="http://www.gaylordnational.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Old Hickory Steakhouse
            </a>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-double-right fa-w-14 "
              data-icon="angle-double-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                fill="currentColor"
              />
            </svg>
          </h2>
          <main
            class="info"
          >
            <p>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-map-marker-alt fa-w-12 "
                data-icon="map-marker-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
                  fill="currentColor"
                />
              </svg>
              Oxon Hill, MD
            </p>
            <p>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-phone-alt fa-w-16 "
                data-icon="phone-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
                  fill="currentColor"
                />
              </svg>
              (301) 965-4000
            </p>
          </main>
        </section>
        <footer
          tabindex="0"
        >
          <p>
            More
          </p>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </footer>
      </section>
      <footer
        class="pagination"
      >
        <button
          class="pagination-btn"
          style="opacity: 0;"
        >
          Previous page
        </button>
        <p
          class="pages"
        >
          1 / 3
        </p>
        <button
          class="pagination-btn"
          style="opacity: 1;"
        >
          Next page
        </button>
      </footer>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RestaurantContainer should match the snapshot if there is filled filter 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="restaurants-container"
      >
        <section
          class="restaurant-card"
          tabindex="0"
        >
          <header>
            <section>
              <p>
                Steak
              </p>
              <p>
                American
              </p>
              <p>
                Contemporary
              </p>
              <p>
                Seafood
              </p>
              <p>
                Cafe
              </p>
            </section>
          </header>
          <section
            class="card-description"
          >
            <h2>
              <a
                href="http://www.gaylordnational.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Old Hickory Steakhouse
              </a>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-angle-double-right fa-w-14 "
                data-icon="angle-double-right"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  fill="currentColor"
                />
              </svg>
            </h2>
            <main
              class="info"
            >
              <p>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-map-marker-alt fa-w-12 "
                  data-icon="map-marker-alt"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
                    fill="currentColor"
                  />
                </svg>
                Oxon Hill, MD
              </p>
              <p>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-phone-alt fa-w-16 "
                  data-icon="phone-alt"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
                    fill="currentColor"
                  />
                </svg>
                (301) 965-4000
              </p>
            </main>
          </section>
          <footer
            tabindex="0"
          >
            <p>
              More
            </p>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-w-10 "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                fill="currentColor"
              />
            </svg>
          </footer>
        </section>
        <section
          class="restaurant-card"
          tabindex="0"
        >
          <header>
            <section>
              <p>
                Japanese
              </p>
              <p>
                Sushi
              </p>
              <p>
                Asian
              </p>
              <p>
                Contemporary
              </p>
              <p>
                Seafood
              </p>
            </section>
          </header>
          <section
            class="card-description"
          >
            <h2>
              <a
                href="http://www.matsuhisaaspen.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Matsuhisa
              </a>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-angle-double-right fa-w-14 "
                data-icon="angle-double-right"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  fill="currentColor"
                />
              </svg>
            </h2>
            <main
              class="info"
            >
              <p>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-map-marker-alt fa-w-12 "
                  data-icon="map-marker-alt"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
                    fill="currentColor"
                  />
                </svg>
                Aspen, CO
              </p>
              <p>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-phone-alt fa-w-16 "
                  data-icon="phone-alt"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
                    fill="currentColor"
                  />
                </svg>
                (970) 544-6628
              </p>
            </main>
          </section>
          <footer
            tabindex="0"
          >
            <p>
              More
            </p>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-down fa-w-10 "
              data-icon="angle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                fill="currentColor"
              />
            </svg>
          </footer>
        </section>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="restaurants-container"
    >
      <section
        class="restaurant-card"
        tabindex="0"
      >
        <header>
          <section>
            <p>
              Steak
            </p>
            <p>
              American
            </p>
            <p>
              Contemporary
            </p>
            <p>
              Seafood
            </p>
            <p>
              Cafe
            </p>
          </section>
        </header>
        <section
          class="card-description"
        >
          <h2>
            <a
              href="http://www.gaylordnational.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Old Hickory Steakhouse
            </a>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-double-right fa-w-14 "
              data-icon="angle-double-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                fill="currentColor"
              />
            </svg>
          </h2>
          <main
            class="info"
          >
            <p>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-map-marker-alt fa-w-12 "
                data-icon="map-marker-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
                  fill="currentColor"
                />
              </svg>
              Oxon Hill, MD
            </p>
            <p>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-phone-alt fa-w-16 "
                data-icon="phone-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
                  fill="currentColor"
                />
              </svg>
              (301) 965-4000
            </p>
          </main>
        </section>
        <footer
          tabindex="0"
        >
          <p>
            More
          </p>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </footer>
      </section>
      <section
        class="restaurant-card"
        tabindex="0"
      >
        <header>
          <section>
            <p>
              Japanese
            </p>
            <p>
              Sushi
            </p>
            <p>
              Asian
            </p>
            <p>
              Contemporary
            </p>
            <p>
              Seafood
            </p>
          </section>
        </header>
        <section
          class="card-description"
        >
          <h2>
            <a
              href="http://www.matsuhisaaspen.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Matsuhisa
            </a>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-angle-double-right fa-w-14 "
              data-icon="angle-double-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                fill="currentColor"
              />
            </svg>
          </h2>
          <main
            class="info"
          >
            <p>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-map-marker-alt fa-w-12 "
                data-icon="map-marker-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
                  fill="currentColor"
                />
              </svg>
              Aspen, CO
            </p>
            <p>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-phone-alt fa-w-16 "
                data-icon="phone-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"
                  fill="currentColor"
                />
              </svg>
              (970) 544-6628
            </p>
          </main>
        </section>
        <footer
          tabindex="0"
        >
          <p>
            More
          </p>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </footer>
      </section>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RestaurantContainer should match the snapshot with the next pack of restaurants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="restaurants-container"
      >
        <section
          class="no-card"
        >
          <img
            alt="cafe"
            src="cafe.svg"
          />
          <h2>
            No restaurant to display!
          </h2>
        </section>
        <footer
          class="pagination"
        >
          <button
            class="pagination-btn"
            style="opacity: 1;"
          >
            Previous page
          </button>
          <p
            class="pages"
          >
            2 / 3
          </p>
          <button
            class="pagination-btn"
            style="opacity: 1;"
          >
            Next page
          </button>
        </footer>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="restaurants-container"
    >
      <section
        class="no-card"
      >
        <img
          alt="cafe"
          src="cafe.svg"
        />
        <h2>
          No restaurant to display!
        </h2>
      </section>
      <footer
        class="pagination"
      >
        <button
          class="pagination-btn"
          style="opacity: 1;"
        >
          Previous page
        </button>
        <p
          class="pages"
        >
          2 / 3
        </p>
        <button
          class="pagination-btn"
          style="opacity: 1;"
        >
          Next page
        </button>
      </footer>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
